[package]
name = "patch-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
rand = "0.8.5"
md5 = "0.7.0"
futures = "0.3.4" # for our async / await blocks
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = "1.0.176"
serde_json = "1.0.104"
reqwest = "0.11.18"
serde_yaml = "0.9.25"
serde_derive = "1.0.176"
tokio-retry = "0.3.0"
async-std = "1.12.0"
lazy_static = "1.4.0"
my_lib = { version = "0.1.0", path = "my_lib" }
dashmap = "5.5.1"
http = "0.2.9"

#[lib]
#name = "my_lib"
#path = "my_lib/src/lib.rs"